# SafeVax

./: # CLAUDE.md  .gitignore  LICENSE  PROJECT_REQUIREMENTS.md  QUICKSTART.md  README.md  Vaccine distribution simulation.py
backend/: CMakeLists.txt  README.md  setup_crow.bat  setup_crow.sh
backend/include/: Hospital.h  Scheduler.h  VaccineAllocator.h
backend/src/: Hospital.cpp  Scheduler.cpp  VaccineAllocator.cpp  main.cpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
